grammar.js
    source_file: ($) =>
      seq(optional($.shebang), repeat($._top_level_statement)),

    shebang: (_) => token(seq("#!/", /[^\r\n]*/)),

    block_comment: (_) =>
      choice(token(prec(2, "/**/")), token(/\/\*(?:[^*]|\*+[^*/])*\*+\//)),

    _top_level_statement: ($) =>
      choice(
        $.file_attribute_list,
        $.namespace_definition,
        $._non_namespace_top_level_statement,
      ),

    _non_namespace_top_level_statement: ($) =>
      choice(
        $.file_attribute_list,
        $.use_declaration,
        $.constant_declaration,
        $.type_alias_declaration,
        $.newtype_declaration,
        $.function_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $._statement,
      ),

    _statement: ($) =>
      choice(
        $.if_statement,
        $.while_statement,
        $.do_while_statement,
        $.for_statement,
        $.foreach_statement,
        $.using_statement,
        $.try_statement,
        $.final_local_declaration,
        $.expression_statement,
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    namespace_definition: ($) =>
      seq(
        "namespace",
        field("name", $.namespace_name),
        field(
          "body",
          choice(
            $.namespace_brace_delimited_body,
            $.namespace_implicit_body,
          ),
        ),
      ),

    namespace_brace_delimited_body: ($) =>
      seq("{", repeat($._top_level_statement), "}"),
    namespace_implicit_body: ($) =>
      seq(
        ";",
        repeat(prec.dynamic(1, $._non_namespace_top_level_statement)),
      ),

    use_declaration: ($) =>
      seq(
        "use",
        field("items", choice($.use_group, commaSep1($.use_item))),
        ";",
      ),

    use_group: ($) =>
      seq(
        field("prefix", $._identifier_name),
        "\\",
        "{",
        optional(seq(commaSep1($.use_item), optional(","))),
        "}",
      ),

    use_item: ($) =>
      seq(field("name", $._identifier_name), optional($.use_alias)),
    use_alias: ($) => seq("as", field("name", $._local_identifier)),

    constant_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "const",
        field("name", $.constant_name),
        "=",
        field("value", $._expression),
        ";",
      ),

    type_alias_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "type",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        "=",
        field("type", $._type),
        ";",
      ),

    newtype_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "newtype",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        "=",
        field("type", $._type),
        ";",
      ),

    function_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "function",
        field("name", $.function_name),
        optional($.type_parameter_list),
        field("parameters", $.parameter_list),
        optional($.return_type),
        optional($.where_clause),
        field("body", $.block),
      ),

    class_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.class_modifier)),
        "class",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        optional($.extends_clause),
        optional($.implements_clause),
        optional($.sealed_permissions),
        field("body", $.class_body),
      ),

    interface_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "interface",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        optional($.extends_clause),
        optional($.sealed_permissions),
        field("body", $.class_body),
      ),

    enum_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "enum",
        field("name", $._local_identifier),
        optional($.type_parameter_list),
        optional($.enum_backing_type),
        optional($.implements_clause),
        field("body", $.class_body),
      ),

    enum_backing_type: ($) => seq(":", field("type", $._type)),
    extends_clause: ($) =>
      seq("extends", commaSep1(field("type", $.named_type))),
    implements_clause: ($) =>
      seq("implements", commaSep1(field("type", $.named_type))),
    sealed_permissions: ($) =>
      seq("for", commaSep1(field("type", $._identifier_name))),

    class_body: ($) => seq("{", repeat($._class_member), "}"),

    _class_member: ($) =>
      choice(
        $.enum_case_declaration,
        $.class_constant_declaration,
        $.method_declaration,
        $.property_declaration,
      ),

    enum_case_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        "case",
        field("name", $.member_name),
        optional($.enum_case_value),
        ";",
      ),

    enum_case_value: ($) => seq("=", field("value", $._expression)),

    class_constant_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.member_modifier)),
        "const",
        choice(
          seq(field("type", $._type), field("name", $.member_name)),
          field("name", $.member_name),
        ),
        "=",
        field("value", $._expression),
        ";",
      ),

    method_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.member_modifier)),
        "function",
        field("name", $.member_name),
        optional($.type_parameter_list),
        field("parameters", $.parameter_list),
        optional($.return_type),
        optional($.where_clause),
        field("body", choice($.block, ";")),
      ),

    property_declaration: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.member_modifier)),
        optional(field("type", $._type)),
        field("name", $.variable),
        optional($.property_default),
        ";",
      ),

    property_default: ($) => seq("=", field("value", $._expression)),

    class_modifier: (_) =>
      choice(
        "abstract",
        "final",
        "readonly",
        "public",
        "protected",
        "private",
        "static",
      ),

    member_modifier: (_) =>
      choice(
        "public",
        "protected",
        "private",
        "static",
        "final",
        "abstract",
        "readonly",
      ),

    attribute_group: ($) =>
      seq("#[", optional(seq(commaSep1($.attribute), optional(","))), "]"),
    file_attribute_list: ($) =>
      seq("#![", optional(seq(commaSep1($.attribute), optional(","))), "]"),
    attribute: ($) =>
      seq(
        field("name", $._identifier_name),
        optional(field("arguments", $.argument_list)),
      ),

    type_parameter_list: ($) =>
      seq("<", commaSep1($.type_parameter), optional(","), ">"),

    type_parameter: ($) =>
      seq(
        optional(field("variance", $.type_variance)),
        field("name", $._local_identifier),
        optional($.type_parameter_bound),
        optional($.type_parameter_default),
      ),

    type_variance: (_) => choice("in", "out"),
    type_parameter_bound: ($) =>
      seq(
        ":",
        field("type", $._type),
        repeat(seq("+", field("type", $._type))),
      ),
    type_parameter_default: ($) => seq("=", field("type", $._type)),

    parameter_list: ($) =>
      seq("(", optional(seq(commaSep1($.parameter), optional(","))), ")"),

    parameter: ($) =>
      seq(
        repeat($.attribute_group),
        repeat(field("modifier", $.member_modifier)),
        optional(field("type", $._type)),
        field("name", $.variable),
        optional($.parameter_default),
      ),

    parameter_default: ($) => seq("=", field("value", $._expression)),

    return_type: ($) => seq(":", field("type", $._type)),

    expression_statement: ($) => seq($._expression, ";"),

    _expression: ($) => $._assignment_level,

    _postfix_level: ($) =>
      choice(
        $._primary_expression,
        alias($._postfix_update_expression, $.update_expression),
        $.function_call_expression,
        $.function_partial_application_expression,
        $.method_call_expression,
        $.method_partial_application_expression,
        $.null_safe_method_call_expression,
        $.static_method_call_expression,
        $.static_method_partial_application_expression,
        $.property_access_expression,
        $.null_safe_property_access_expression,
        $.static_property_access_expression,
        $.class_constant_access_expression,
        $.subscript_expression,
      ),

    return_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq("return", optional(field("value", $._expression))),
      ),

    function_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        choice(
          seq(
            field("function", $._postfix_level),
            optional($.turbofish),
            field("arguments", $.argument_list),
          ),
          seq(
            field("function", $._soft_function_name),
            field("arguments", $.argument_list),
          ),
        ),
      ),

    argument_list: ($) =>
      seq("(", optional(seq(commaSep1($.argument), optional(","))), ")"),

    argument: ($) => choice($.named_argument, $.positional_argument),

    positional_argument: ($) => field("value", $._expression),
    named_argument: ($) =>
      seq(field("name", $.member_name), ":", field("value", $._expression)),
    property_access_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("object", $._postfix_level),
          "->",
          field("property", $.member_name),
        ),
      ),

    class_constant_access_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("class", choice($._postfix_level, $.relative_scope)),
          optional(field("class_arguments", $.turbofish)),
          "::",
          field("constant", $.member_name),
        ),
      ),

    relative_scope: (_) => choice("self", "parent", "static"),

    boolean_literal: (_) => choice("true", "false"),
    null_literal: (_) => "null",

    integer_literal: (_) =>
      token(
        seq(
          choice(
            /0[xX][0-9A-Fa-f](?:_?[0-9A-Fa-f])*/,
            /0[bB][01](?:_?[01])*/,
            /0[oO][0-7](?:_?[0-7])*/,
            /0|[1-9](?:_?[0-9])*/,
          ),
          optional(/[iIuU]/),
        ),
      ),

    string_literal: ($) =>
      choice($.single_quoted_string, $.double_quoted_string),

    single_quoted_string: ($) =>
      seq(
        "'",
        repeat(
          choice(
            alias($._single_quoted_string_content, $.string_content),
            $.single_quoted_escape_sequence,
          ),
        ),
        "'",
      ),

    _single_quoted_string_content: (_) => token.immediate(prec(1, /[^'\\]+/)),
    _constant_reference: ($) =>
      choice($.constant_name, $.qualified_name, $.fully_qualified_name),

    constant_access_expression: ($) => field("name", $._constant_reference),

    _type: ($) =>
      choice(
        $.union_type,
        $.intersection_type,
        $.negated_type,
        $._type_primary,
      ),

    primitive_type: (_) =>
      choice(
        "string",
        "int",
        "uint",
        "fresh",
        "float",
        "bool",
        "void",
        "mixed",
        "never",
        "object",
      ),

    named_type: ($) =>
      seq($._named_type_base, optional($.member_type)),

    _named_type_base: ($) =>
      prec.right(seq(field("name", $._name), optional($.type_argument_list))),

    type_argument_list: ($) =>
      seq("<", commaSep1($.type_argument), optional(","), ">"),

    type_argument: ($) => field("type", $._type),

    tuple_type: ($) =>
      seq(
        "(",
        choice(
          $.trailing_type,
          seq(
            $._type,
            ",",
            repeat(seq($._type, ",")),
            optional(choice($._type, $.trailing_type)),
          ),
        ),
        ")",
      ),

    variable: (_) => token(seq("$", IDENTIFIER)),
    identifier: ($) => choice($._identifier_token, "_", ...CONSTRUCT_NAMES),
    _local_identifier: ($) =>
      choice(
        alias($._identifier_token, $.identifier),
        ...CONSTRUCT_NAMES.map((name) => alias(name, $.identifier)),
      ),

    _identifier_name: ($) =>
      choice($.identifier, $.qualified_name, $.fully_qualified_name),

    namespace_name: ($) =>
      choice(
        $._local_identifier,
        $.qualified_namespace_name,
        $.fully_qualified_namespace_name,
      ),

    qualified_namespace_name: ($) =>
      seq(
        alias($._namespace_name_segment_continuing_token, $.identifier),
        repeat(
          seq(
            $._name_separator,
            alias($._namespace_name_segment_continuing_token, $.identifier),
          ),
        ),
        $._name_separator,
        $._immediate_namespace_name_segment,
      ),

    fully_qualified_namespace_name: ($) =>
      seq(
        $._name_separator,
        choice(
          $._immediate_namespace_name_segment,
          seq(
            alias($._namespace_name_segment_continuing_token, $.identifier),
            repeat(
              seq(
                $._name_separator,
                alias($._namespace_name_segment_continuing_token, $.identifier),
              ),
            ),
            $._name_separator,
            $._immediate_namespace_name_segment,
          ),
        ),
      ),

    qualified_name: ($) =>
      seq(
        alias(
          choice(
            $._name_segment_continuing_token,
            $._namespace_name_segment_continuing_token,
          ),
          $.identifier,
        ),
        repeat(
          seq(
            $._name_separator,
            alias(
              choice(
                $._name_segment_continuing_token,
                $._namespace_name_segment_continuing_token,
              ),
              $.identifier,
            ),
          ),
        ),
        $._name_separator,
        $._immediate_name_segment,
      ),

    fully_qualified_name: ($) =>
      seq(
        $._name_separator,
        choice(
          $._immediate_name_segment,
          seq(
            alias(
              choice(
                $._name_segment_continuing_token,
                $._namespace_name_segment_continuing_token,
              ),
              $.identifier,
            ),
            repeat(
              seq(
                $._name_separator,
                alias(
                  choice(
                    $._name_segment_continuing_token,
                    $._namespace_name_segment_continuing_token,
                  ),
                  $.identifier,
                ),
              ),
            ),
            $._name_separator,
            $._immediate_name_segment,
          ),
        ),
      ),

    _immediate_name_segment: ($) =>
      alias(token.immediate(IDENTIFIER), $.identifier),
    _immediate_namespace_name_segment: ($) =>
      alias(token.immediate(NON_WILDCARD_IDENTIFIER), $.identifier),

    function_name: ($) =>
      choice($._local_identifier, ...SOFT_KEYWORDS, ...CONTEXTUAL_KEYWORDS),
    _soft_function_name: ($) =>
      alias(choice(...SOFT_KEYWORDS), $.function_name),
    constant_name: ($) => choice($._local_identifier, ...CONTEXTUAL_KEYWORDS),
